MMT-87: Fix heading group spacing and add entry title placeholder

--- a/app/assets/stylesheets/modules/_internal.scss
+++ b/app/assets/stylesheets/modules/_internal.scss
@@ -19,6 +19,10 @@
       }
     }
   }
+
+  .row-content {
+    padding: .5em 0;
+  }
 }
 
 .preview-collection {
