--- a/app/assets/stylesheets/modules/_masthead.scss
+++ b/app/assets/stylesheets/modules/_masthead.scss
@@ -27,8 +27,13 @@ main.content {
   }
 }
 
+.welcome {
+  .row-content {
+    padding-top: .5em;
+  }
+}
+
 .heading-group {
-  margin-top: 2em;
   margin-bottom: 2em;
   padding: 0.5em 1em;
   border-left: 5px solid $red;
